--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -41,7 +41,7 @@ body{
 .v3-7-h-otherbtn .ui_flex {
     height: 100%;
     padding: 0 0.5rem;
-    margin-bottom: 0.25rem;
+    margin-bottom: 0.25rem; 
 }
 .v3-7-h-otherbtn>.ui_flex>.ui_flex-hd {
     width: 4rem;
@@ -93,9 +93,6 @@ image {
     width: 100%;
     height: 100%;
 }
-.tuijian_item {
-    background: #fff;
-}
 .tuijian_item .type_title {
     height: 1.8rem;
     line-height: 1.8rem;
@@ -130,7 +127,7 @@ image {
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
-    margin-bottom: 0.38rem;
+    margin-bottom: 0.38rem; 
 }
 .tuijian_list .info {
     overflow: hidden;
@@ -170,4 +167,21 @@ image {
 .tuijian_list .v3-7-info .time {
     font-size: 12px;
     color: #b2b2b2;
+}
+.tuijian_list+.tuijian_list:after {
+    position: absolute;
+    right: 0;
+    top: 0;
+    left: 1rem;
+    height: 1px;
+    content: '';
+    background-color: #eeeeee;
+}
+.v3-7-h-otherbtn + .tuijian_item{
+   margin-top: 0;
+    background: #fff;
+}
+.tuijian_item {
+    margin-top: 0.5rem;
+    background: #fff;
 }
