--- a/app.wxss
+++ b/app.wxss
@@ -1,2 +1,4 @@
-@import "utils/wxParse/wxParse.wxss";
+@import "utils/mui.min.wxss";
 @import "utils/style.wxss";
+@import "utils/wxParse/wxParse.wxss";
+
