--- a/pages/me/me.wxml
+++ b/pages/me/me.wxml
@@ -1,9 +1,9 @@
 <scroll-view scroll-y="true" id="pullrefresh" class="mui-content mui-scroll-wrapper" data-pullrefresh="1">
     <view class="mui-scroll" style="transform: translate3d(0px, 0px, 0px) translateZ(0px);">
 
-    <view class="mui-table-view mui-table-view-chevron" >
+    <view class="mui-table-view mui-table-view-chevron" bindtap='onUserAvatar'>
         <view class="mui-table-view-cell mui-media">
-            <view class="header"  bindtap='onDetail'>
+            <view class="header"  >
                 <image class="headerImg" src="../../images/me/defaultAvatar.png" mode="aspectFit"/>
                 <view id="mylisttext" class="mui-media-body mui-ellipsis">{{item.title}}
                     <p>未登录</p>
@@ -13,8 +13,9 @@
         </view>
         <image class="arrow"src="../../images/me/rightArrow.png"></image>
   </view>
-
+  <section class="margin-t-15">
   <view class="mui-table-view mui-table-view-chevron" >
+        
         <view class="mui-table-view-cell mui-media">
             <view class="clickA"  bindtap='onDetail'>
                 <image class="mui-media-object mui-pull-left" src="../../images/me/mycase.png" mode="aspectFit"/>
@@ -47,6 +48,8 @@
         </view>
         <image class="arrow"src="../../images/me/rightArrow.png"></image>
   </view>
+ </section>
+  <section class="margin-t-15">
   <view class="mui-table-view mui-table-view-chevron" >
         <view class="mui-table-view-cell mui-media">
             <view class="clickA"  bindtap='onDetail'>
@@ -69,5 +72,6 @@
         </view>
         <image class="arrow"src="../../images/me/rightArrow.png"></image>
   </view>
+  </section>
 </view>
 </scroll-view>
