--- a/pages/me/me.wxss
+++ b/pages/me/me.wxss
@@ -1,3 +1,6 @@
+.margin-t-15 {
+    margin-top: 0.75rem !important;
+}
 .mui-table-view-cell {
     position: relative;
     overflow: hidden;
@@ -65,7 +68,7 @@ p {
     position: absolute;
     right: 0;
     bottom: 0;
-    left: 15px;
+    left: 0;
     height: 1px;
     content: '';
     -webkit-transform: scaleY(.5);
@@ -93,6 +96,7 @@ p {
 }
 p{
   font-size: 15px;
+  color:black;
 }
 .arrow{
   width:15px;
