--- a/pages/connection/index.wxml
+++ b/pages/connection/index.wxml
@@ -1,5 +1,9 @@
 
-<view class='a-z'>
+<import src="../../utils/wxSortPickerView/wxSortPickerView.wxml"/> 
+<template is="wxSortPickerView" data="{{wxSortPickerData}}"/>
+
+
+<!-- <view class='a-z'>
   <view wx:for="{{cityAZ}}" wx:key="unique">
     <view data-id='{{item.cityName}}' bindtap='bindAZ'>{{item.cityName}}</view>
   </view>
@@ -9,4 +13,4 @@
     <view wx:if="{{item.cityPinYin.length > 1}}" class='city-item' data-cityname='{{item.cityName}}' bindtap='citySelected'>{{item.cityName}}</view>
     <view wx:else class='city-item-A-Z' data-cityname='{{item.cityName}}'>{{item.cityName}}</view>
   </view>
-</view>
+</view> -->
