--- a/utils/wxSortPickerView/wxSortPickerView.wxss
+++ b/utils/wxSortPickerView/wxSortPickerView.wxss
@@ -16,12 +16,12 @@
 }
 
 .wxSortPickerViewTag{
-  background-color: #eee;
-  font-size: 16px;
+  background-color: #efeff4;
+  font-size: 12px;
   font-weight: bold;
   color: #000;
-  height: 30px;
-  line-height: 30px;
+  height: 24px;
+  line-height: 24px;
   padding: 0 5px;
 }
 
