--- a/pages/book/index.wxss
+++ b/pages/book/index.wxss
@@ -16,7 +16,7 @@
     padding-bottom: 0rem;
 }
 .gzzybox .panel .h2 {
-    font-size: 0.7rem;
+    font-size: 14px;
     color: #333333;
     padding: 0;
     margin: 0;
@@ -31,22 +31,23 @@
     font-weight: bold;
 }
 .gzzybox .panel p.info {
-    font-size: 0.56rem;
+    font-size: 13px;
     color: #999999;
-    line-height: 1;
-    margin-top: 0.52rem;
+    line-height: 13px;
+    margin-top:10px;
+    padding-left: 10px;
 }
 .gzzybox .panel ul {
     padding: 0.2rem 0;
-    font-size: 0.6rem;
+    font-size: 12px;
     color: #428fd7;
     margin: 0;
 }
 .gzzybox .panel ul li {
-    line-height: 1.2rem;
+    line-height: 16px;
     list-style-type: disc;
-    margin-left: 0.8rem;
-    margin-top: 0.2rem;
+    margin-left: 20px;
+    margin-top: 10px;
 }
 ul {
     list-style-type: none;
@@ -57,11 +58,11 @@ li {
 }
 .gzzybox .panel a.more {
     display: block;
-    margin-top: 0.56rem;
-    height: 2rem;
-    line-height: 2rem;
+    margin-top: 15px;
+    height: 30px;
+    line-height: 30px;
     color: #333333;
-    font-size: 0.6rem;
+    font-size: 14px;
     text-align: center;
     position: relative;
 }
