--- a/pages/msg/chatSingle.wxss
+++ b/pages/msg/chatSingle.wxss
@@ -316,13 +316,12 @@ footer {
     background-color: #F5F5F5;
     color: #000000;
     border: none;
-    border-bottom: 1.5px solid #ddd;
+    border-bottom: 0.5px solid #ddd;
     font-size: 16px !important;
     font-family: verdana !important;
+    width: 95%;
 }
-textarea {
-    min-height: 1.5rem;
-}
+
 .footer-center .voice-btn {
     display: none;
     margin-left: 0.25rem;
@@ -537,6 +536,7 @@ footer .iconfont {
     display: inline-block;
     text-align: center;
     background: 0 0;
+    
 }
 .mui-grid-view.mui-grid-9 .mui-media .mui-icon {
     padding: 5px;
@@ -557,18 +557,7 @@ footer .iconfont {
     text-decoration: none;
     -webkit-font-smoothing: antialiased;
 }
-.mui-table-view.mui-grid-view .mui-table-view-cell .mui-media-body {
-    margin-top: 5px;
-    font-size: 14px;
-    line-height: 16px;
-    color: #808080;
-}
-.mui-table-view.mui-grid-view .mui-table-view-cell .mui-media-body {
-    display: block;
-    width: 100%;
-    height: 15px;
-    text-overflow: ellipsis;
-}
+
 .mui-table-view-cell:after {
     position: absolute;
     right: 0;
@@ -591,9 +580,8 @@ footer .iconfont {
     padding: 11px 15px;
     vertical-align: top;
 }
-.mui-table-view.mui-grid-view .mui-table-view-cell {
-    font-size: 17px;
-    display: inline-block;
-    text-align: center;
-    background: 0 0;
+.mui-col-xs-3 {
+    width:25%;
+    float:left;
+    box-sizing: border-box; 
 }
