--- a/pages/msg/detail.wxss
+++ b/pages/msg/detail.wxss
@@ -88,16 +88,7 @@ image {
     vertical-align: top;
     font-size: 14px;
 }
-.layim-chat-user cite {
-    position: absolute;
-    top: -2px;
-    width: 500px;
-    line-height: 20px;
-    font-size: 12px;
-    white-space: nowrap;
-    color: #999;
-    font-style: normal;
-}
+
 .layim-chat-mine .layim-chat-text {
     margin-left: 0;
     text-align: left;
@@ -105,6 +96,7 @@ image {
     color: #ffffff;
 }
 .layim-chat-text {
+    overflow: visible;
     position: relative;
     max-width: calc(100% - 34px);
     min-height: 22px;
@@ -196,15 +188,30 @@ li {
     position: absolute;
     left: 0px;
 }
+.layim-chat-user cite {
+    font-size: 12px;
+    white-space: nowrap;
+    color: #999;
+    text-align: left;
+    font-style: normal;
+    padding-left: 10px;
+    margin-top:-2px;
+    float:right;
+}
 .layim-chat-mine .layim-chat-user cite {
-    left: auto;
-    right: 44px;
+    padding-right: 10px;
     text-align: right;
+    float:left;
 }
 .layim-chat-text .layui-layim-file {
     color: #00bf8f;
     display: block;
     text-align: center;
+}
+.layim-chat-mine .layim-chat-text:after {
+    left: auto;
+    right: -10px;
+    border-top-color: #6aa6dc;
 }
 .layim-chat-text:after {
     content: '';
@@ -280,7 +287,7 @@ footer {
     display: block;
     position: fixed;
     width: 100%;
-    height: auto;
+    height: 30px;
     min-height: 45px;
     border-top: solid 1px #ddd;
     left: 0px;
